@@ -46,6 +46,9 @@ Ledger_line_engraver::start_spanner ()
 void
 Ledger_line_engraver::process_music ()
 {
+  /*
+    Need to do this, otherwise the first note might miss ledgers. 
+  */
   if (!span_)
     start_spanner ();
 }
@@ -73,7 +76,8 @@ Ledger_line_engraver::acknowledge_staff_symbol (Grob_info s)
   Spanner *sym = dynamic_cast<Spanner *> (s.grob ());
 
   if (!span_
-      || span_->get_bound (LEFT) != sym->get_bound (LEFT))
+      || (span_->get_bound (LEFT) != sym->get_bound (LEFT)
+	  && sym->get_bound (LEFT)))
     {
       stop_spanner ();
       start_spanner ();
